--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,5 +1,9 @@
-# Installation
+# Hello
 
-```bash
-npm install myawesomelib
+Lorem ipsum dolor sit amet.
+
+```python mark=1[22:30]
+print("Rendered with Code Hike")
 ```
+
+Lorem ipsum dolor sit amet.
