--- a/docs/DeFi.mdx
+++ b/docs/DeFi.mdx
@@ -71,7 +71,7 @@ DeFi is designed to use [cryptocurrency](https://www.investopedia.com/terms/c/cr
 
 Decentralized finance is still in the beginning stages of its evolution. For starters, it is unregulated, which means the ecosystem is still riddled with infrastructural mishaps, hacks, and scams.
 
-Current laws were crafted based on the idea of separate financial jurisdictions, each with its own set of laws and rules. DeFi’s borderless transaction ability presents essential questions for this type of regulation. For example, who is responsible for [investigating a financial crime](https://www.investopedia.com/terms/f/fincen.asp) that occurs across borders, protocols, and DeFi apps? Who would enforce the regulations, and how would they enforce them?
+Current laws were crafted based on the idea of separate financial jurisdictions, each with its own set of laws and rules. DeFi's borderless transaction ability presents essential questions for this type of regulation. For example, who is responsible for [investigating a financial crime](https://www.investopedia.com/terms/f/fincen.asp) that occurs across borders, protocols, and DeFi apps? Who would enforce the regulations, and how would they enforce them?
 
 > The decentralized finance ecosystem's open and distributed nature might also pose problems to existing financial regulation.
 
@@ -81,14 +81,16 @@ Many questions must be answered and advancements made before DeFi becomes safe t
 
 ### DeFi Projects Map
 
-<div style="text-align:center; width: 100%">
+<div style={{ textAlign: "center", width: "100%" }}>
   <img
     src="https://the-defiant-web.s3.amazonaws.com/img/2020/10/24172812/DeFi_Map_-_The_Defiant.png"
     alt="Ethereum DeFi Projects Map"
   ></img>
 </div>
 
-<div style="text-align:center; width: 100%">(Ethereum DeFi Projects Map)</div>
+<div style={{ textAlign: "center", width: "100%" }}>
+  (Ethereum DeFi Projects Map)
+</div>
 
 #### Trading
 
@@ -136,7 +138,7 @@ Derivatives platforms in DeFi offer the issuance and trading of digital assets w
 
 #### Custody
 
-Ethereum wallets which allow for the self-custody of users' private keys and digital assets. This means individuals are in control of their funds at all times, and don’t need to trust a centralized entity, reducing the risk of hacks. These wallets are the gateways through which users can interact with DeFi applications.
+Ethereum wallets which allow for the self-custody of users' private keys and digital assets. This means individuals are in control of their funds at all times, and don't need to trust a centralized entity, reducing the risk of hacks. These wallets are the gateways through which users can interact with DeFi applications.
 
 熱錢包、資產儲存(Metamask, Trust Wallet, Instadapp)
 
