--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,9 +1,5 @@
-# Hello
+# Docs page for my notes
 
-Lorem ipsum dolor sit amet.
-
-```python mark=1[22:30]
-print("Rendered with Code Hike")
+```js mark=1[31:44]
+console.log("my miscellaneous learning notes");
 ```
-
-Lorem ipsum dolor sit amet.
