--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,5 +1,5 @@
-# Docs page for my notes
+# Docs page for my study notes
 
-```js mark=1[31:44]
-console.log("my miscellaneous learning notes");
+```js mark=1[31:41]
+console.log("my miscellaneous study notes");
 ```
