--- a/docs/scrollycoding.mdx
+++ b/docs/scrollycoding.mdx
@@ -16,7 +16,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing something about points, sed d
 
 Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus.
 
-```js focus=3:10
+```js app.js focus=3:10
 const { lorem, ipsum } = dolor({
   sit: {
     amet: 1,
@@ -57,7 +57,7 @@ Id aliquet risus feugiat in ante metus dictum at tempor. Sed blandit libero volu
 
 Morbi quis commodo.
 
-```js focus=11:17
+```js app.js focus=11:17
 
 ```
 
@@ -73,7 +73,7 @@ Id aliquet risus feugiat in ante metus dictum at tempor. Sed blandit libero volu
 
 Ut consequat semper viverra. Fringilla ut morbi tincidunt augue interdum velit euismod.
 
-```js focus=11:14
+```js app.js focus=11:14
 const { lorem, ipsum } = dolor({
   sit: {
     amet: 1,
@@ -112,7 +112,7 @@ Sed blandit libero volutpat sed cras.
 
 Gravida in fermentum et sollicitudin ac orci phasellus egestas tellus. Volutpat consequat mauris nunc congue nisi vitae.
 
-```js focus=15:21
+```js app.js focus=15:21
 
 ```
 
@@ -133,7 +133,7 @@ Mi bibendum neque egestas congue quisque egestas diam in arcu. Nisi lacus sed vi
 
 Morbi quis commodo.
 
-```js
+```js app.js
 
 ```
 
